--- a/9-Advance Python Concepts/9.3-Decorators.ipynb
+++ b/9-Advance Python Concepts/9.3-Decorators.ipynb
@@ -67,24 +67,195 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "## Closures - In c#, java we can see them as -> function inside a function\n",
+    "\n",
+    "def main_welcome():\n",
+    "    msg = \"Welcome\"\n",
+    "    def sub_welcome_method():\n",
+    "        print(\"Welcome to the Advance Python Course\")\n",
+    "\n",
+    "        print(\"Please learn these concepts properly\")\n",
+    "\n",
+    "    return sub_welcome_method()"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Welcome to the Advance Python Course\n",
+      "Please learn these concepts properly\n"
+     ]
+    }
+   ],
+   "source": [
+    "main_welcome()"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Anything that is defined outside the sub-method can be accessed by the sub-method\n",
+    "\n",
+    "def main_welcome():\n",
+    "    msg = \"Welcome\"\n",
+    "    def sub_welcome_method():\n",
+    "        print(\"Welcome to the Advance Python Course\")\n",
+    "\n",
+    "        print(msg)\n",
+    "\n",
+    "    return sub_welcome_method()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Welcome to the Advance Python Course\n",
+      "Welcome\n"
+     ]
+    }
+   ],
+   "source": [
+    "main_welcome()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# Passing a function - inbuilt function - print\n",
+    "def main_welcome(func):\n",
+    "    msg = \"Welcome\"\n",
+    "    def sub_welcome_method():\n",
+    "        print(\"Welcome to the Advance Python Course\")\n",
+    "\n",
+    "        func(\"Welcome everyone to this  tutorial\")\n",
+    "\n",
+    "        print(\"Please learn these concepts properly\")\n",
+    "\n",
+    "\n",
+    "    return sub_welcome_method()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Welcome to the Advance Python Course\n",
+      "Welcome everyone to this  tutorial\n",
+      "Please learn these concepts properly\n"
+     ]
+    }
+   ],
+   "source": [
+    "main_welcome(print)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# Passing a function - inbuilt function - len\n",
+    "def main_welcome(func):\n",
+    "    msg = \"Welcome\"\n",
+    "    def sub_welcome_method():\n",
+    "        print(\"Welcome to the Advance Python Course\")\n",
+    "\n",
+    "        print(func(\"Welcome everyone to this  tutorial\"))\n",
+    "\n",
+    "        print(\"Please learn these concepts properly\")\n",
+    "\n",
+    "\n",
+    "    return sub_welcome_method()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Welcome to the Advance Python Course\n",
+      "34\n",
+      "Please learn these concepts properly\n"
+     ]
+    }
+   ],
+   "source": [
+    "main_welcome(len)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# Passing a function - inbuilt function - len\n",
+    "def main_welcome(func, lst):\n",
+    "    msg = \"Welcome\"\n",
+    "    def sub_welcome_method():\n",
+    "        print(\"Welcome to the Advance Python Course\")\n",
+    "\n",
+    "        print(func(lst))\n",
+    "\n",
+    "        print(\"Please learn these concepts properly\")\n",
+    "\n",
+    "\n",
+    "    return sub_welcome_method()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Welcome to the Advance Python Course\n",
+      "5\n",
+      "Please learn these concepts properly\n"
+     ]
+    }
+   ],
+   "source": [
+    "main_welcome(len, [1, 2, 3, 4, 5])"
+   ]
   },
   {
    "cell_type": "code",
