--- a/9-Advance Python Concepts/9.3-Decorators.ipynb
+++ b/9-Advance Python Concepts/9.3-Decorators.ipynb
@@ -259,17 +259,171 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "## Decorators\n",
+    "# Manual creation of decorator\n",
+    "## Closures - In c#, java we can see them as -> function inside a function\n",
+    "\n",
+    "def main_welcome(func):\n",
+    "\n",
+    "    def sub_welcome_method():\n",
+    "        print(\"Welcome to the Advance Python Course\")\n",
+    "        func()\n",
+    "        print(\"Please learn these concepts properly\")\n",
+    "\n",
+    "    return sub_welcome_method()"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def course_introduction():\n",
+    "    print(\"This is an ADVANCE PYTHON COURSE\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Welcome to the Advance Python Course\n",
+      "This is an ADVANCE PYTHON COURSE\n",
+      "Please learn these concepts properly\n"
+     ]
+    }
+   ],
+   "source": [
+    "main_welcome(course_introduction)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Welcome to the Advance Python Course\n",
+      "This is an ADVANCE PYTHON COURSE\n",
+      "Please learn these concepts properly\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Inorder to create a decorator we use @\n",
+    "@main_welcome\n",
+    "def course_introduction():\n",
+    "    print(\"This is an ADVANCE PYTHON COURSE\")\n",
+    "\n",
+    "# course_introduction function will be called by main_welcome automatically\n",
+    "# main_welcome is not being changed or altered but we are giving course_introducton a function as a parameter"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Decorator - example_2\n",
+    "def my_decorator(func):\n",
+    "    def wrapper():\n",
+    "        print(\"Something is happening before the function is called.\")\n",
+    "        func()\n",
+    "        print(\"Something is happening after the function is called.\")\n",
+    "    return wrapper()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Something is happening before the function is called.\n",
+      "Hello!\n",
+      "Something is happening after the function is called.\n"
+     ]
+    }
+   ],
+   "source": [
+    "@my_decorator\n",
+    "def say_hello():\n",
+    "    print(\"Hello!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Decorators with arguments\n",
+    "def repeat(n):\n",
+    "    def decorator(func):\n",
+    "        def wrapper(*args, **kwargs):\n",
+    "            for _ in range(n):\n",
+    "                func(**args, **kwargs)\n",
+    "        return wrapper\n",
+    "    return decorator"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "@repeat(3)\n",
+    "def say_hello():\n",
+    "    print(\"Hello\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "__main__.say_hello() argument after ** must be a mapping, not tuple",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Input \u001b[1;32mIn [58]\u001b[0m, in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43msay_hello\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
+      "Input \u001b[1;32mIn [56]\u001b[0m, in \u001b[0;36mrepeat.<locals>.decorator.<locals>.wrapper\u001b[1;34m(*args, **kwargs)\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mwrapper\u001b[39m(\u001b[38;5;241m*\u001b[39margs, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs):\n\u001b[0;32m      5\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m _ \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(n):\n\u001b[1;32m----> 6\u001b[0m         func(\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39margs, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs)\n",
+      "\u001b[1;31mTypeError\u001b[0m: __main__.say_hello() argument after ** must be a mapping, not tuple"
+     ]
+    }
+   ],
+   "source": [
+    "say_hello()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Conclusion\n",
+    "\n",
+    "Decorators are a powerful tool in Python for extemding and modifying the behavior of functions and methods. They provide a clean and readable way to add functionality such as logging, timing, access control, and more without changing the original code. Understand and using decorators effectively can significantly enhance your Python Programming skills."
+   ]
   }
  ],
  "metadata": {
