--- a/9-Advance Python Concepts/9.3-Decorators.ipynb
+++ b/9-Advance Python Concepts/9.3-Decorators.ipynb
@@ -333,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -343,12 +343,23 @@
     "        print(\"Something is happening before the function is called.\")\n",
     "        func()\n",
     "        print(\"Something is happening after the function is called.\")\n",
-    "    return wrapper()"
+    "    return wrapper"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "@my_decorator\n",
+    "def say_hello():\n",
+    "    print(\"Hello!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -362,14 +373,12 @@
     }
    ],
    "source": [
-    "@my_decorator\n",
-    "def say_hello():\n",
-    "    print(\"Hello!\")"
+    "say_hello()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -378,14 +387,14 @@
     "    def decorator(func):\n",
     "        def wrapper(*args, **kwargs):\n",
     "            for _ in range(n):\n",
-    "                func(**args, **kwargs)\n",
+    "                func(*args, **kwargs)\n",
     "        return wrapper\n",
     "    return decorator"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -396,19 +405,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "__main__.say_hello() argument after ** must be a mapping, not tuple",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Input \u001b[1;32mIn [58]\u001b[0m, in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43msay_hello\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
-      "Input \u001b[1;32mIn [56]\u001b[0m, in \u001b[0;36mrepeat.<locals>.decorator.<locals>.wrapper\u001b[1;34m(*args, **kwargs)\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mwrapper\u001b[39m(\u001b[38;5;241m*\u001b[39margs, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs):\n\u001b[0;32m      5\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m _ \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(n):\n\u001b[1;32m----> 6\u001b[0m         func(\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39margs, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs)\n",
-      "\u001b[1;31mTypeError\u001b[0m: __main__.say_hello() argument after ** must be a mapping, not tuple"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello\n",
+      "Hello\n",
+      "Hello\n"
      ]
     }
    ],
