--- a/10-Data Analysis With Python/numpy.ipynb
+++ b/10-Data Analysis With Python/numpy.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -141,11 +141,245 @@
     "print(arr2)\n",
     "print(arr2.shape)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "arr3 = np.array([[[1, 2, 3], [2, 3, 4], [3, 4, 5]],\n",
+    "                 [[4, 5, 6], [5, 6, 7], [6, 7, 8]],\n",
+    "                 [[7, 8, 9], [8, 9, 10], [9, 10, 11]]])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[ 1  2  3]\n",
+      "  [ 2  3  4]\n",
+      "  [ 3  4  5]]\n",
+      "\n",
+      " [[ 4  5  6]\n",
+      "  [ 5  6  7]\n",
+      "  [ 6  7  8]]\n",
+      "\n",
+      " [[ 7  8  9]\n",
+      "  [ 8  9 10]\n",
+      "  [ 9 10 11]]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(arr3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(3, 3, 3)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(arr3.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0, 2, 4, 6, 8])"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.arange(0, 10, 2)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0],\n",
+       "       [2],\n",
+       "       [4],\n",
+       "       [6],\n",
+       "       [8]])"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.arange(0, 10, 2).reshape(5, 1) # 5 rows, 1 column - 2D array\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1., 1., 1., 1.],\n",
+       "       [1., 1., 1., 1.],\n",
+       "       [1., 1., 1., 1.]])"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.ones((3, 4)) # 3 rows, 4 columns - 2D array with 1s"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1., 0., 0.],\n",
+       "       [0., 1., 0.],\n",
+       "       [0., 0., 1.]])"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "## identity matrix \n",
+    "np.eye(3) #diagonal elements are 1s, remaining are 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Array: \n",
+      " [[1 2 3]\n",
+      " [4 5 6]]\n",
+      "Shape: (2, 3)\n",
+      "Number of Dimensions:  2\n",
+      "Size (number of elements):  6\n",
+      "Data Type:  int64\n",
+      "Item Size (in bytes):  8\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Attributes of Numpy Array\n",
+    "arr = np.array([[1, 2, 3], [4, 5, 6]])\n",
+    "\n",
+    "print(\"Array: \\n\", arr)\n",
+    "print(\"Shape:\", arr.shape)\n",
+    "print(\"Number of Dimensions: \", arr.ndim)\n",
+    "print(\"Size (number of elements): \", arr.size)\n",
+    "print(\"Data Type: \", arr.dtype)\n",
+    "print(\"Item Size (in bytes): \", arr.itemsize)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Addition: [11 22 33 44 55]\n",
+      "Subtraction: [ -9 -18 -27 -36 -45]\n",
+      "Multiplication: [ 10  40  90 160 250]\n",
+      "Division: [0.1 0.1 0.1 0.1 0.1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Numpy Vectorized Operation\n",
+    "arr1 = np.array([1, 2, 3, 4, 5])\n",
+    "arr2 = np.array([10, 20, 30, 40, 50])\n",
+    "\n",
+    "## Element wise Addition\n",
+    "print(\"Addition:\", arr1 + arr2)\n",
+    "\n",
+    "\n",
+    "## Element wise Subtraction\n",
+    "print(\"Subtraction:\", arr1 - arr2)\n",
+    "\n",
+    "## Element wise Addition\n",
+    "print(\"Multiplication:\", arr1 * arr2)\n",
+    "\n",
+    "## Element wise Addition\n",
+    "print(\"Division:\", arr1 / arr2)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Universal Functions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
