--- a/10-Data Analysis With Python/numpy.ipynb
+++ b/10-Data Analysis With Python/numpy.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -320,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -346,28 +346,150 @@
     "## Element wise Subtraction\n",
     "print(\"Subtraction:\", arr1 - arr2)\n",
     "\n",
-    "## Element wise Addition\n",
+    "## Element wise Multiplication\n",
     "print(\"Multiplication:\", arr1 * arr2)\n",
     "\n",
-    "## Element wise Addition\n",
+    "## Element wise Division\n",
     "print(\"Division:\", arr1 / arr2)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1.         1.41421356 1.73205081 2.         2.23606798 2.44948974]\n",
+      "[  2.71828183   7.3890561   20.08553692  54.59815003 148.4131591\n",
+      " 403.42879349]\n",
+      "[ 0.84147098  0.90929743  0.14112001 -0.7568025  -0.95892427 -0.2794155 ]\n",
+      "[0.         0.69314718 1.09861229 1.38629436 1.60943791 1.79175947]\n"
+     ]
+    }
+   ],
    "source": [
-    "## Universal Functions"
+    "## Universal Functions\n",
+    "arr = np.array([1, 2, 3, 4, 5, 6])\n",
+    "\n",
+    "## square-root\n",
+    "print(np.sqrt(arr))\n",
+    "\n",
+    "## Exponential\n",
+    "print(np.exp(arr))\n",
+    "\n",
+    "## Sine\n",
+    "print(np.sin(arr))\n",
+    "\n",
+    "## Natural Log\n",
+    "print(np.log(arr))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Array:\n",
+      " [[ 1  2  3  4]\n",
+      " [ 5  6  7  8]\n",
+      " [ 9 10 11 12]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Array Slicing and Indexing\n",
+    "arr = np.array([[1, 2, 3, 4], [5, 6, 7, 8], [9, 10, 11, 12]])\n",
+    "print(\"Array:\\n\", arr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1, 2, 3, 4])"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr[0] # first row"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.int64(1)"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr[0][0] # first row, first column"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 5,  6,  7,  8],\n",
+       "       [ 9, 10, 11, 12]])"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr[1:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 7,  8],\n",
+       "       [11, 12]])"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr[1:, 2:]"
+   ]
   },
   {
    "cell_type": "code",
