--- a/10-Data Analysis With Python/numpy.ipynb
+++ b/10-Data Analysis With Python/numpy.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -389,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -493,6 +493,205 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "[[3 4]\n",
+      " [7 8]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(arr[0][0])\n",
+    "print(arr[0:2, 2:])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 6  7]\n",
+      " [10 11]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(arr[1:, 1:3])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Modify array Elements\n",
+    "arr[0, 0] = 100"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[100   2   3   4]\n",
+      " [  5   6   7   8]\n",
+      " [  9  10  11  12]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(arr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[100   2   3   4]\n",
+      " [100 100 100 100]\n",
+      " [100 100 100 100]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "arr[1:] = 100\n",
+    "print(arr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Normalized Data:  [-1.41421356 -0.70710678  0.          0.70710678  1.41421356]\n"
+     ]
+    }
+   ],
+   "source": [
+    "## statistical concepts - Normalization\n",
+    "## Change the data to have mean of 0 and standard deviation of 1\n",
+    "data = np.array([1, 2, 3, 4, 5])\n",
+    "\n",
+    "# Calculate the mean and standard deviation\n",
+    "mean = np.mean(data)\n",
+    "std_dev = np.std(data)\n",
+    "\n",
+    "# Normalize the Data\n",
+    "normalized_data = (data - mean) / std_dev # standard normal distribution\n",
+    "print(\"Normalized Data: \", normalized_data)\n",
+    "\n",
+    "# Output\n",
+    "# Normalized Data:  [-1.41421356 -0.70710678  0.          0.70710678  1.41421356]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean:  5.5\n",
+      "Median:  5.5\n",
+      "Standard Deviation:  2.8722813232690143\n",
+      "Variance:  8.25\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Mean, Median, Mode\n",
+    "\n",
+    "data = np.array([1, 2, 3, 4, 5, 6, 7, 8, 9, 10])\n",
+    "\n",
+    "# Mean\n",
+    "mean = np.mean(data)\n",
+    "print(\"Mean: \", mean)\n",
+    "\n",
+    "# Median\n",
+    "median = np.median(data)\n",
+    "print(\"Median: \", median)\n",
+    "\n",
+    "# Standard Deviation\n",
+    "std_dev = np.std(data)\n",
+    "print(\"Standard Deviation: \", std_dev)\n",
+    "\n",
+    "# Variance\n",
+    "variance = np.var(data)\n",
+    "print(\"Variance: \", variance)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 6,  7,  8,  9, 10])"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "## Logical Operations\n",
+    "data = np.array([1, 2, 3, 4, 5, 6, 7, 8, 9, 10])\n",
+    "\n",
+    "data[data>5]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([5, 6, 7, 8])"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data[(data>=5) & (data<=8)]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -501,7 +700,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
