--- a/10-Data Analysis With Python/10.1-numpy.ipynb
+++ b/10-Data Analysis With Python/10.1-numpy.ipynb
@@ -626,7 +626,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -641,7 +641,8 @@
     }
    ],
    "source": [
-    "# Mean, Median, Mode\n",
+    "# Mean, Median, Standard Deviation and Variance\n",
+    "import numpy as np\n",
     "\n",
     "data = np.array([1, 2, 3, 4, 5, 6, 7, 8, 9, 10])\n",
     "\n",
