--- a/10-Data Analysis With Python/10.2-pandas.ipynb
+++ b/10-Data Analysis With Python/10.2-pandas.ipynb
@@ -3,6 +3,31 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "#### Pandas-DataFrame And Series\n",
+    "\n",
+    "Pandas is a powerful data manipulation library in Python, widely used for data analysis and data cleaning. It provides two primary data strutures: Series and DataFrame. A Series is a one-dimensional array-like object, while a DataFrame is a two-dimensional, size-mutable, and potentially heterogeneous tabular data structure with labled axex (rows and columns)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
