--- a/10-Data Analysis With Python/10.1-numpy.ipynb
+++ b/10-Data Analysis With Python/10.1-numpy.ipynb
@@ -11,18 +11,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "[notice] A new release of pip is available: 24.0 -> 24.3.1\n",
-      "[notice] To update, run: C:\\Users\\Dell\\AppData\\Local\\Programs\\Python\\Python312\\python.exe -m pip install --upgrade pip"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -34,7 +25,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\n"
+      "\n",
+      "[notice] A new release of pip is available: 24.0 -> 24.3.1\n",
+      "[notice] To update, run: C:\\Users\\Dell\\AppData\\Local\\Programs\\Python\\Python312\\python.exe -m pip install --upgrade pip\n"
      ]
     }
    ],
@@ -44,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -66,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -304,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
