--- a/10-Data Analysis With Python/10.2-pandas.ipynb
+++ b/10-Data Analysis With Python/10.2-pandas.ipynb
@@ -11,9 +11,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "[notice] A new release of pip is available: 24.0 -> 24.3.1\n",
+      "[notice] To update, run: C:\\Users\\Dell\\AppData\\Local\\Programs\\Python\\Python312\\python.exe -m pip install --upgrade pip\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -25,15 +34,6 @@
       "Requirement already satisfied: tzdata>=2022.1 in c:\\users\\dell\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from pandas) (2023.3)\n",
       "Requirement already satisfied: six>=1.5 in c:\\users\\dell\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from python-dateutil>=2.8.2->pandas) (1.16.0)\n"
      ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "[notice] A new release of pip is available: 24.0 -> 24.3.1\n",
-      "[notice] To update, run: C:\\Users\\Dell\\AppData\\Local\\Programs\\Python\\Python312\\python.exe -m pip install --upgrade pip\n"
-     ]
     }
    ],
    "source": [
@@ -42,12 +42,98 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Series: \n",
+      " 0    1\n",
+      "1    2\n",
+      "2    3\n",
+      "3    4\n",
+      "4    5\n",
+      "dtype: int64\n",
+      "<class 'pandas.core.series.Series'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Series\n",
+    "## A Pandas Series is a one-dimensional array-like object that can hold any data type. It is similar to a column in a table.\n",
+    "import pandas as pd\n",
+    "data = [1, 2, 3, 4, 5]\n",
+    "series = pd.Series(data)\n",
+    "print(\"Series: \\n\", series)\n",
+    "print(type(series))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a    1\n",
+      "b    2\n",
+      "c    3\n",
+      "dtype: int64\n",
+      "<class 'pandas.core.series.Series'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Create a Series from a Dictionary\n",
+    "data = {'a':1, 'b':2, 'c':3}\n",
+    "series_dict = pd.Series(data)\n",
+    "print(series_dict)\n",
+    "print(type(series_dict))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a    10\n",
+      "b    20\n",
+      "c    30\n",
+      "dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "data = [10, 20, 30]\n",
+    "index = ['a', 'b', 'c'] # index\n",
+    "series_1 = pd.Series(data, index=index)\n",
+    "print(series_1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd"
+    "## Dataframe - multiple rows and columns\n",
+    "# create a DataFrame from a dictionary of list\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
