--- a/10-Data Analysis With Python/10.4-readdata.ipynb
+++ b/10-Data Analysis With Python/10.4-readdata.ipynb
@@ -610,6 +610,413 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "url = \"https://en.wikipedia.org/wiki/Mobile_country_code\"\n",
+    "\n",
+    "df = pd.read_html(url, match=\"Country\", header=0)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Mobile country code</th>\n",
+       "      <th>Country</th>\n",
+       "      <th>ISO 3166</th>\n",
+       "      <th>Mobile network codes</th>\n",
+       "      <th>National MNC authority</th>\n",
+       "      <th>Remarks</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>289</td>\n",
+       "      <td>A Abkhazia</td>\n",
+       "      <td>GE-AB</td>\n",
+       "      <td>List of mobile network codes in Abkhazia</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>MCC is not listed by ITU</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>412</td>\n",
+       "      <td>Afghanistan</td>\n",
+       "      <td>AF</td>\n",
+       "      <td>List of mobile network codes in Afghanistan</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>276</td>\n",
+       "      <td>Albania</td>\n",
+       "      <td>AL</td>\n",
+       "      <td>List of mobile network codes in Albania</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>603</td>\n",
+       "      <td>Algeria</td>\n",
+       "      <td>DZ</td>\n",
+       "      <td>List of mobile network codes in Algeria</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>544</td>\n",
+       "      <td>American Samoa (United States of America)</td>\n",
+       "      <td>AS</td>\n",
+       "      <td>List of mobile network codes in American Samoa</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>247</th>\n",
+       "      <td>452</td>\n",
+       "      <td>Vietnam</td>\n",
+       "      <td>VN</td>\n",
+       "      <td>List of mobile network codes in the Vietnam</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>248</th>\n",
+       "      <td>543</td>\n",
+       "      <td>W Wallis and Futuna</td>\n",
+       "      <td>WF</td>\n",
+       "      <td>List of mobile network codes in Wallis and Futuna</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>249</th>\n",
+       "      <td>421</td>\n",
+       "      <td>Y Yemen</td>\n",
+       "      <td>YE</td>\n",
+       "      <td>List of mobile network codes in the Yemen</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>250</th>\n",
+       "      <td>645</td>\n",
+       "      <td>Z Zambia</td>\n",
+       "      <td>ZM</td>\n",
+       "      <td>List of mobile network codes in Zambia</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>251</th>\n",
+       "      <td>648</td>\n",
+       "      <td>Zimbabwe</td>\n",
+       "      <td>ZW</td>\n",
+       "      <td>List of mobile network codes in Zimbabwe</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>252 rows × 6 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     Mobile country code                                    Country ISO 3166  \\\n",
+       "0                    289                                 A Abkhazia    GE-AB   \n",
+       "1                    412                                Afghanistan       AF   \n",
+       "2                    276                                    Albania       AL   \n",
+       "3                    603                                    Algeria       DZ   \n",
+       "4                    544  American Samoa (United States of America)       AS   \n",
+       "..                   ...                                        ...      ...   \n",
+       "247                  452                                    Vietnam       VN   \n",
+       "248                  543                        W Wallis and Futuna       WF   \n",
+       "249                  421                                    Y Yemen       YE   \n",
+       "250                  645                                   Z Zambia       ZM   \n",
+       "251                  648                                   Zimbabwe       ZW   \n",
+       "\n",
+       "                                  Mobile network codes National MNC authority  \\\n",
+       "0             List of mobile network codes in Abkhazia                    NaN   \n",
+       "1          List of mobile network codes in Afghanistan                    NaN   \n",
+       "2              List of mobile network codes in Albania                    NaN   \n",
+       "3              List of mobile network codes in Algeria                    NaN   \n",
+       "4       List of mobile network codes in American Samoa                    NaN   \n",
+       "..                                                 ...                    ...   \n",
+       "247        List of mobile network codes in the Vietnam                    NaN   \n",
+       "248  List of mobile network codes in Wallis and Futuna                    NaN   \n",
+       "249          List of mobile network codes in the Yemen                    NaN   \n",
+       "250             List of mobile network codes in Zambia                    NaN   \n",
+       "251           List of mobile network codes in Zimbabwe                    NaN   \n",
+       "\n",
+       "                      Remarks  \n",
+       "0    MCC is not listed by ITU  \n",
+       "1                         NaN  \n",
+       "2                         NaN  \n",
+       "3                         NaN  \n",
+       "4                         NaN  \n",
+       "..                        ...  \n",
+       "247                       NaN  \n",
+       "248                       NaN  \n",
+       "249                       NaN  \n",
+       "250                       NaN  \n",
+       "251                       NaN  \n",
+       "\n",
+       "[252 rows x 6 columns]"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting openpyxl\n",
+      "  Downloading openpyxl-3.1.5-py2.py3-none-any.whl.metadata (2.5 kB)\n",
+      "Collecting et-xmlfile (from openpyxl)\n",
+      "  Downloading et_xmlfile-2.0.0-py3-none-any.whl.metadata (2.7 kB)\n",
+      "Downloading openpyxl-3.1.5-py2.py3-none-any.whl (250 kB)\n",
+      "Downloading et_xmlfile-2.0.0-py3-none-any.whl (18 kB)\n",
+      "Installing collected packages: et-xmlfile, openpyxl\n",
+      "Successfully installed et-xmlfile-2.0.0 openpyxl-3.1.5\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
+   "source": [
+    "%pip install openpyxl"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_excel(\"sample_data.xlsx\" )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Age</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Prasanna</td>\n",
+       "      <td>23</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Raj</td>\n",
+       "      <td>24</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Paul</td>\n",
+       "      <td>20</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Azmodeus</td>\n",
+       "      <td>28</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       Name  Age\n",
+       "0  Prasanna   23\n",
+       "1       Raj   24\n",
+       "2      Paul   20\n",
+       "3  Azmodeus   28"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Pickle in Python is primarily used in serializing and deserializing a Python object structure. In other words, it's the process of converting a Python object into a byte stream to store it in a file/database, maintain program state across sessions, or transport data over the network."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_pickle(\"df_excel\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_pickle(\"df_excel\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Age</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Prasanna</td>\n",
+       "      <td>23</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Raj</td>\n",
+       "      <td>24</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Paul</td>\n",
+       "      <td>20</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Azmodeus</td>\n",
+       "      <td>28</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       Name  Age\n",
+       "0  Prasanna   23\n",
+       "1       Raj   24\n",
+       "2      Paul   20\n",
+       "3  Azmodeus   28"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
