--- a/12-Logging In Python/logging.ipynb
+++ b/12-Logging In Python/logging.ipynb
@@ -43,21 +43,55 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "#### Log levels\n",
+    "\n",
+    "Python's logging module has several log levels indicating the severity of the events. The default levels are:\n",
+    "- DEBUG: Detailed information, typically of interest only when diagnosing problems.\n",
+    "- INFO: Confirmation that things are working as expected.\n",
+    "- WARNING: An indication that something unexpected happended or indicative of some problem in the near future(e.d., 'disk space low'). The software is still working as expected.\n",
+    "- ERROR: Due to more serious problem, the software has not been able to perform some function.\n",
+    "- CRITICAL: A very serious error, indicating that the program itself may be unable to continue running."
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import logging\n",
+    "\n",
+    "## Configuring logging setting - kernel need to be restarted inorder update the config\n",
+    "logging.basicConfig(\n",
+    "    filename='app.log',\n",
+    "    filemode='w',\n",
+    "    level = logging.DEBUG,\n",
+    "    format = '%(asctime)s-%(name)s-%(levelname)s-%(message)s',\n",
+    "    datefmt='%Y-%m-%d %H:%M:%S'\n",
+    ")\n",
+    "\n",
+    "## log messages with different severity levels\n",
+    "logging.debug(\"This is a debug message\")\n",
+    "logging.info(\"This is an info\")\n",
+    "logging.warning(\"This is a wraning message\")\n",
+    "logging.error(\"This is a error message\")\n",
+    "logging.critical(\"This is a critical message\")\n"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "## adding more messages\n",
+    "logging.debug(\"This is a debug message\")\n",
+    "logging.info(\"This is an info\")\n",
+    "logging.warning(\"This is a wraning message\")\n",
+    "logging.error(\"This is a error message\")\n",
+    "logging.critical(\"This is a critical message\")"
+   ]
   },
   {
    "cell_type": "code",
