--- a/12-Logging In Python/12.2-multilogger.ipynb
+++ b/12-Logging In Python/12.2-multilogger.ipynb
@@ -11,17 +11,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import logging\n",
+    "import logging.config\n",
+    "# Create a logger for module1\n",
+    "logger1 = logging.getLogger(\"module1\")\n",
+    "logger1.setLevel(logging.DEBUG)\n",
+    "\n",
+    "# Create a logger for modue2\n",
+    "logger2 = logging.getLogger(\"module2\")\n",
+    "logger2.setLevel(logging.WARNING)\n",
+    "\n",
+    "# Configure logging settings\n",
+    "logging.basicConfig(\n",
+    "    level = logging.DEBUG,\n",
+    "    format = '%(asctime)s - %(name)s - %(levelname)s - %(message)s',\n",
+    "    datefmt=\"%Y-%M-%d %H:%M:%S\"\n",
+    ")\n"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025-46-06 21:46:45 - module1 - DEBUG - This is a Debug message for module1\n",
+      "2025-46-06 21:46:45 - module2 - WARNING - This is a Warning message for module2\n",
+      "2025-46-06 21:46:45 - module2 - ERROR - This is error message for module2\n"
+     ]
+    }
+   ],
+   "source": [
+    "## log messages with different loggers\n",
+    "logger1.debug(\"This is a Debug message for module1\")\n",
+    "logger2.warning(\"This is a Warning message for module2\")\n",
+    "logger2.error(\"This is error message for module2\")"
+   ]
   },
   {
    "cell_type": "code",
@@ -45,7 +77,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.12.0"
   }
  },
