Multi Threading and Multi Processing

--- a/Multithreading/basics.ipynb
+++ b/Multithreading/basics.ipynb
@@ -4,6 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Multi Threading and Multi Processing\n",
     "- Program\n",
     "- Process\n",
     "- Threads\n",
@@ -55,7 +56,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Thread\n"
+    "#### Thread\n",
+    "A thread is a unit of the execution within the process\n",
+    "\n",
+    "Single Threaded Process:\n",
+    "This thread have its own stack and register but it will be sharing the code segment, data segment and heap.\n",
+    "\n",
+    "Eg:\n",
+    "In MS Paint I want to open and create an rectangle box\n",
+    "MS Paint -> opened a process\n",
+    "select an option and draw rectangle -> a thread \n",
+    "select an option and draw circle -> a thread \n",
+    "\n",
+    "Multi Threaded Process:\n",
+    "Thread1 its own stack and registers\n",
+    "Thread2 its own stack and registers\n",
+    "Both shares all Code segment, Data Segment and Heap."
    ]
   }
  ],
