--- a/15-Memory Management/memory_manage.ipynb
+++ b/15-Memory Management/memory_manage.ipynb
@@ -177,8 +177,62 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Object obj1 created\n",
+      "Object obj2 created\n",
+      "Object obj1 deleted\n",
+      "Object obj2 deleted\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "9"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "## Handling circular reference\n",
+    "import gc\n",
+    "\n",
+    "class MyObject:\n",
+    "    def __init__(self, name):\n",
+    "        self.name = name\n",
+    "        print(f\"Object {self.name} created\")\n",
+    "\n",
+    "    def __del__(self):\n",
+    "        print(f\"Object {self.name} deleted\")\n",
+    "\n",
+    "obj1 = MyObject(\"obj1\")\n",
+    "obj2 = MyObject(\"obj2\")\n",
+    "\n",
+    "## create circular reference\n",
+    "obj1.ref = obj2\n",
+    "obj2.ref = obj1\n",
+    "\n",
+    "del obj1\n",
+    "del obj2\n",
+    "\n",
+    "# Manually trigger the garbage collection\n",
+    "gc.collect()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "## Generators for memory efficiency\n"
+   ]
   }
  ],
  "metadata": {
