--- a/1-Python Basics/assignment/assignment_question.ipynb
+++ b/1-Python Basics/assignment/assignment_question.ipynb
@@ -105,11 +105,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "15\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here"
+    "# Your code here\n",
+    "def big(a: int, b: int)->int:\n",
+    "    return a if a>b else b\n",
+    "\n",
+    "x = int(input(\"Enter the number1: \"))\n",
+    "y = int(input(\"Enter the number2: \"))\n",
+    "z = int(input(\"Enter the number3: \"))\n",
+    "\n",
+    "print(big(big(x, y), z))\n"
    ]
   },
   {
@@ -121,11 +137,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "120\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here"
+    "# Your code here\n",
+    "def fact(n: int)->int:\n",
+    "    if n==0 or n==1:\n",
+    "        return 1\n",
+    "    return n * fact(n-1)\n",
+    "\n",
+    "print(fact(5))"
    ]
   },
   {
@@ -375,7 +405,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
